fix download links

--- a/src/pages/media/dislokaciya.html
+++ b/src/pages/media/dislokaciya.html
@@ -863,7 +863,7 @@
                             </div>
                             <!-- Button -->
                             <div class="work-full-action">
-                                <a href="/download/Триста8ісім-Дислокація.mp3"
+                                <a href="/trystavisim/download/Триста8ісім-Дислокація.mp3"
                                     class="btn btn-spacia btn-color btn-medium download-file-work">Скачати пісню</a>
                             </div>
                             <!-- End Button -->
