--- a/src/pages/media/varosh-banda.html
+++ b/src/pages/media/varosh-banda.html
@@ -875,7 +875,7 @@
                             </div>
                             <!-- Button -->
                             <div class="work-full-action">
-                                <a href="/download/Varosh-Banda.mp3"
+                                <a href="/trystavisim/download/Varosh-Banda.mp3"
                                     class="btn btn-spacia btn-color btn-medium download-file-work">Скачати пісню</a>
                             </div>
                             <!-- End Button -->
