delete base patch

--- a/src/pages/media/varosh-banda.html
+++ b/src/pages/media/varosh-banda.html
@@ -776,7 +776,7 @@
                             style="display: inline-block;overflow: hidden; width: 50px;margin-top: -10px;margin-right: 6px;"
                             href="https://open.spotify.com/artist/33rVu09HQNnM4ZcI4G4I3t?si=rO_9KmtuTLGJzNokeWNcBw"
                             rel="noopener" data-original-title="Trystavisim on Spotify">
-                            <img src="/trystavisim/media/Spotify_Icon_RGB_Green.png" alt="Trystavisim on Spotify">
+                            <img src="/media/Spotify_Icon_RGB_Green.png" alt="Trystavisim on Spotify">
                         </a>
                         <a title="" target="_blank"
                             href="https://music.apple.com/us/artist/trystavisim/1176715679?itsct=music_box&amp;itscg=30200&amp;ct=artists_trystavisim&amp;app=music&amp;ls=1"
@@ -875,7 +875,7 @@
                             </div>
                             <!-- Button -->
                             <div class="work-full-action">
-                                <a href="/trystavisim/download/Varosh-Banda.mp3"
+                                <a href="/download/Varosh-Banda.mp3"
                                     class="btn btn-spacia btn-color btn-medium download-file-work">Скачати пісню</a>
                             </div>
                             <!-- End Button -->
